Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/062_shadowing_decl_less_fpars.xi
f(x:int, y:int)
f(x:int)

//@PRACOWNIA
//@should_not_typecheck
